Fix z-index
Text was appearing above the top bar.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 .h2Title {
   margin-top: 10px;
   margin-bottom: 0;
+  font-size: 25px;
 }
 
 /* ToDo: configure contact info table for mobile device
@@ -43,6 +44,7 @@ ul li {
   box-shadow: 5px 5px 4px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   margin-bottom: 15px;
+  z-index: 10;
 }
 
 /* Dropdown Button */
@@ -55,7 +57,7 @@ ul li {
   background-color: rgba(0, 0, 0, 0);
   color: white;
   padding: 0;
-  font-size: 8px;
+  font-size: 0.5em;
   border: none;
 }
 
@@ -202,6 +204,7 @@ ul li {
 .h3Location {
   margin: 0;
   text-align: right;
+  font-size: 25px;
 }
 
 .tblEducationEntry, .tblInvolvementEntry {
@@ -215,6 +218,7 @@ ul li {
 
 .education {
   position: relative;
+  z-index: 1;
   display: inline-block;
 }
 
